# crusoe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  rewrite-pass-plan.md  rewrite-pass-status.md
chapters/: CH-001-the-strange-request.md  CH-002-the-first-ledger.md  CH-003-morning-at-saint-judes.md  CH-004-claras-clock.md  README.md  chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10.md  chapter-11.md  chapter-12.md  chapter-13.md  chapter-14.md  chapter-15.md  chapter-16.md  chapter-17.md
final-draft-chapters/: chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-10.md  chapter-11.md  chapter-12.md  chapter-13.md  chapter-14.md  chapter-15.md  chapter-16.md  chapter-17.md
first-draft-codex-chapters/: chapter-03.md  chapter-04.md  chapter-05.md  chapter-10.md  chapter-15.md
rust/: README.md
rust/crates/quality-orchestrator/: Cargo.toml
rust/crates/quality-orchestrator/src/: main.rs
scripts/: pre-draft-session.sh  run-quality-session.sh
writing-artifacts/: DOC-001-world-design.md  DOC-002-character-bible.md  DOC-003-high-level-plot-outline.md  DOC-004-chapter-by-chapter-outline.md  DOC-005-mystery-architecture.md  DOC-006-timeline-and-continuity-tracker.md  DOC-007-theme-and-motif-guide.md  README.md  act-01-revision-notes.md  act-02-revision-notes.md  character-bible.md  continuity-reveal-matrices.md  delivery-contract.md  dependency-notes.md  handoff-format.md  (+20 more)
(+269 files in other folders)
